@@ -1,6 +1,6 @@
 Metadata-Version: 2.1
 Name: mwahpy
-Version: 1.3.4
+Version: 1.3.5
 Summary: A python package for easily parsing and processing data from MilkyWay@home
 Home-page: https://github.com/thomasdonlon/mwahpy
 Author: Tom Donlon
@@ -89,8 +89,6 @@ Description:  MILKYWAY@HOME PYTHON PACKAGE (MWAHPY)
         
         > ...
         
-        Any time you make a change to the source code, you'll have to repeat step 3
-        
         5. Once you are done making changes to the source code, put in a pull request to master
         
         6. Navigate to the directory where you cloned the repo, and then run
@@ -120,7 +118,8 @@ Description:  MILKYWAY@HOME PYTHON PACKAGE (MWAHPY)
         BUGS
         ========================================
         
-         No known bugs.
+        - output_handler.make_nbody_input() sometimes produces output that is unreadable by MilkyWay@home Nbody.
+          It is believed that this is an issue with tab characters and different operating systems.
         
 Platform: UNKNOWN
 Classifier: Programming Language :: Python :: 3
